フォント調整　リファ

--- a/NavigationBar/NavigationBar.vcxproj
+++ b/NavigationBar/NavigationBar.vcxproj
@@ -171,8 +171,8 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="NavigationBar.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\NavigationBar\NavigationBar.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
     <ClCompile Include="..\..\addons\ofxGui\src\ofxBaseGui.cpp" />
     <ClCompile Include="..\..\addons\ofxGui\src\ofxButton.cpp" />
@@ -188,7 +188,7 @@
     <ClCompile Include="..\..\addons\ofxXmlSettings\libs\tinyxmlparser.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="NavigationBar.h" />
+    <ClInclude Include="src\NavigationBar\NavigationBar.h" />
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="..\..\addons\ofxGui\src\ofxBaseGui.h" />
     <ClInclude Include="..\..\addons\ofxGui\src\ofxButton.h" />
