--- a/NavigationBar/NavigationBar.vcxproj.filters
+++ b/NavigationBar/NavigationBar.vcxproj.filters
@@ -10,8 +10,8 @@
 		<ClCompile Include="src\main.cpp">
 			<Filter>src</Filter>
 		</ClCompile>
-		<ClCompile Include="src\NavigationBar\NavigationBar.cpp">
-			<Filter>src\NavigationBar</Filter>
+		<ClCompile Include="src\navigationBar\NavigationBar.cpp">
+			<Filter>src\navigationBar</Filter>
 		</ClCompile>
 		<ClCompile Include="src\ofApp.cpp">
 			<Filter>src</Filter>
@@ -28,10 +28,7 @@
 		<ClCompile Include="..\..\addons\ofxImGui\src\EngineOpenGLES.cpp">
 			<Filter>addons\ofxImGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\addons\ofxImGui\src\Gui.cpp">
-			<Filter>addons\ofxImGui\src</Filter>
-		</ClCompile>
-		<ClCompile Include="..\..\addons\ofxImGui\src\Helpers.cpp">
+		<ClCompile Include="..\..\addons\ofxImGui\src\ofxImGui.cpp">
 			<Filter>addons\ofxImGui\src</Filter>
 		</ClCompile>
 		<ClCompile Include="..\..\addons\ofxImGui\libs\imgui\src\imgui.cpp">
@@ -60,8 +57,8 @@
 		<Filter Include="src">
 			<UniqueIdentifier>{d8376475-7454-4a24-b08a-aac121d3ad6f}</UniqueIdentifier>
 		</Filter>
-		<Filter Include="src\NavigationBar">
-			<UniqueIdentifier>{E889EBC1-AE3B-D0F0-A3B9-264B}</UniqueIdentifier>
+		<Filter Include="src\navigationBar">
+			<UniqueIdentifier>{1B619241-1B4F-1875-DC87-D209}</UniqueIdentifier>
 		</Filter>
 		<Filter Include="addons">
 			<UniqueIdentifier>{71834F65-F3A9-211E-73B8-DC85}</UniqueIdentifier>
@@ -95,8 +92,8 @@
 		<ClInclude Include="src\ofApp.h">
 			<Filter>src</Filter>
 		</ClInclude>
-		<ClInclude Include="src\NavigationBar\NavigationBar.h">
-			<Filter>src\NavigationBar</Filter>
+		<ClInclude Include="src\navigationBar\NavigationBar.h">
+			<Filter>src\navigationBar</Filter>
 		</ClInclude>
 		<ClInclude Include="src\ofApp.h">
 			<Filter>src</Filter>
@@ -111,12 +108,6 @@
 			<Filter>addons\ofxImGui\src</Filter>
 		</ClInclude>
 		<ClInclude Include="..\..\addons\ofxImGui\src\EngineOpenGLES.h">
-			<Filter>addons\ofxImGui\src</Filter>
-		</ClInclude>
-		<ClInclude Include="..\..\addons\ofxImGui\src\Gui.h">
-			<Filter>addons\ofxImGui\src</Filter>
-		</ClInclude>
-		<ClInclude Include="..\..\addons\ofxImGui\src\Helpers.h">
 			<Filter>addons\ofxImGui\src</Filter>
 		</ClInclude>
 		<ClInclude Include="..\..\addons\ofxImGui\src\imconfig.h">
